hphp/test/slow/exceptions/65.php.expectf
string(12) "test1:Caught"
string(12) "test2:Caught"
string(12) "test3:Caught"

Notice: Undefined variable: a in %s/test/slow/exceptions/65.php on line 20

Fatal error: Cls: Expected string or object in %s/test/slow/exceptions/65.php on line 20
